# qr-decomposition

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cuda_qrd.cuh  matrices.h  omp_qrd.h  seq_qrd.h
src/: cuda_qrd.cu  matrices.c  omp_qrd.c  seq_qrd.c
